[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-usefulness-core"
version = "0.1.0"
description = "Shared business logic for review usefulness calculation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
